--- a/Lógica_de_Programação/ex002/pages/index.html
+++ b/Lógica_de_Programação/ex002/pages/index.html
@@ -10,6 +10,7 @@
   <body>
     <h2>Teste de JavaScript</h2>
     <script>
+      //GLOBAL FUNCTIONS
       function pl(){
         document.write("<br>")
       };
