--- a/Lógica_de_Programação/ex012/pages/index.html
+++ b/Lógica_de_Programação/ex012/pages/index.html
@@ -37,8 +37,32 @@
                 document.write(palavras);
                 pl();
         }
-            
-        var segredos = [1,8,5,10];
+            function sorteia(){
+                return Math.round(Math.random() * 10);
+        }
+            function sorteiaNumeros(quantidade){
+                var segredos = [];
+                var numero = 1;
+            while (numero <= quantidade){
+                var numeroAleatorio = sorteia()
+                if(numeroAleatorio !== 0){
+                    var achou = false;
+                    for(var posicao = 0; posicao < segredos.length; posicao++){
+                        if(segredos[posicao] == numeroAleatorio){
+                            achou = true;
+                            break;
+                        }
+                    }
+                    if(achou == false){
+                        segredos.push(numeroAleatorio);
+                        numero++;
+                    }
+                }
+            }
+            return segredos;
+        }
+
+        var segredos = sorteiaNumeros(5);
         var input = document.querySelector("input");
         var button = document.querySelector("button"); input.focus();
 
