Arquitetura de css

--- a/02_FlexBox_e_CSS/Projeto-Apeperia/index.html
+++ b/02_FlexBox_e_CSS/Projeto-Apeperia/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;600&display=swap"
       rel="./css/reset.csssheet"
     />
+    <link rel="shortcut icon" href="./img/logo-apeperia.svg" type="image/x-icon">
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/base.css" />
     <link rel="stylesheet" href="./css/cabecalho.css" />
