Curso de Arrays
projeto AluraBooks

--- a/04_JavaScript/projeto_inicial/index.html
+++ b/04_JavaScript/projeto_inicial/index.html
@@ -21,6 +21,6 @@
       <ul class="list" data-list>
       </ul>
     </div>
-    <script src="assets/listaDeTarefas.js"></script>
+    <script type="module" src="assets/main.js"></script>
 </body>
 </html>
